# podpora_przygoda

./: README.md
LAB1/: CMakeLists.txt  package.xml
dane_do_wykresow/: dane_linear.txt  dane_lipolynomial.txt
install/: local_setup.sh  setup.sh
interpolation/: CMakeLists.txt  package.xml
interpolation/srv/: Interpolation.srv  Inverse.srv  OintInterpolation.srv  OpInterpolation.srv
lab1/: package.xml  setup.py
lab1/lab1/: lab1_publisher.py
lab1/launch/: lab1_launch.py
lab1_v2/: package.xml  setup.cfg  setup.py
lab1_v2/lab1_v2/: lab1_v2_publisher.py
lab1_v2/launch/: lab1_v2_launch.py
lab3_v2/: package.xml  setup.cfg  setup.py  urdf2.yaml
lab3_v2/lab3_v2/: DH.json  kdl_dkin.py  nonkdl_dkin.py
lab3_v2/lab3_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lab3_v2/launch/: demo.launch.py
lab3_v2/urdf/: r2d2.rviz  r2d2_dynamic.urdf.xarco.xml  urdf.yaml  urdf2.yaml
lab4/: DH.json  package.xml  setup.py
lab4/lab4/: jint.py  jint_controle_srv.py  jint_srv.py  kdl_dkin.py  nonkdl_dkin.py  oint.py  oint_srv.py  r2d2.rviz
lab4/launch/: demo.launch.py  demo2.launch.py
lab4/urdf/: r2d2.rviz  r2d2_dynamic.urdf.xarco.xml
lab5/: package.xml  setup.py
lab5/lab5/: ikin.py  jint.py  jint_srv.py  kdl_dkin.py  lab4_oint.rviz  nonkdl_dkin.py  oint.py  oint_srrvrvv.py  oint_srv.py  r2d2.rviz
lab5/launch/: demo.launch.py  demo2.launch.py
lab5/urdf/: r2d2_dynamic.urdf.xacro.xml  urdf.yaml
log/: latest_build
manipulator/urdf_tutorial/: DH.json  converter.py  package.xml  setup.py
manipulator/urdf_tutorial/launch/: demo.launch.py  (+2 more)
(+12 files in other folders)
